verif (0.4.0) precise; urgency=low

  * New features:
    - Added -m categorical
    - Added -m discrimination
    - Added -m leps
    - Added -m nsec
  * Better handling of legend entries

 -- Thomas Nipen <thomas.nipen@met.no>  Tue, 1 Mar 2016 23:55:00 +0100

verif (0.3.0) precise; urgency=low

  * New features:
    - Added -x month and -x year
    - Added -m meteo
    - Added -m roc
    - Added -m economicvalue
    - Added -m quantilescore
  * Better date support:
    - Dates can be parsed in -xlim
    - Nicer date labels on the x-axis
    - Prefer 3h, 6h, 12h, 24h gridline increments

 -- Thomas Nipen <thomas.nipen@met.no>  Fri, 11 Dec 2015 13:43:29 +0100

verif (0.2.0) precise; urgency=low

  * Prototype release suitable for testing

 -- Thomas Nipen <thomas.nipen@met.no>  Sun, 13 Sep 2015 22:09:13 +0200

verif (0.1.0) precise; urgency=low

  * This is just a reference to the version of the program when it was first added to github

 -- Thomas Nipen <thomas.nipen@met.no>  Sat, 8 Aug 2015 19:15:27 -0700                                                                                