@@ -1,6 +1,7 @@
 verif (0.4.0) precise; urgency=low
 
   * New features:
+    - Added -m alphaindex
     - Added -m categorical
     - Added -m discrimination
     - Added -m leps
